--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,8 @@
   background-color: #f3f2ef;
   display: flex;
   flex-direction: column;
-  /* align-items: center; */
+  align-items: center;
+  min-height: 100vh;
 }
 
 .app__body {
